# ba-vector-db

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: students_min.json  wiki_titles.json  wiki_urls.json
data/articles/: Blue_Canvas(蔚蓝档案).md  主线剧情.md  任务剧情.md  成句与梗.md  蔚蓝档案.md  蔚蓝档案原声带.md  配音.md
data/articles/主线剧情/: 最终篇.md
data/articles/学校/: SRT特殊学园.md  三一综合学园.md  千年科学学园.md  山海经高级中学.md  格黑娜学园.md  百鬼夜行联合学园.md  赤冬联邦学园.md  阿拜多斯高中.md  阿里乌斯分校.md
data/articles/学生/: 一之濑明日奈.md  下仓惠.md  不破莲华.md  中务桐乃.md  丰见亚都梨.md  丹花伊吹.md  久田伊树菜.md  乙花堇.md  仲正一花.md  伊原木喜美.md  伊草遥香.md  伊落玛丽.md  佐城智惠.md  佐天泪子(蔚蓝档案).md  冰室濑奈.md  初音未来(蔚蓝档案).md  剑先弦生.md  勇美枫.md  勘解由小路紫.md  十六夜野乃美.md  千鸟三千留.md  古关忧.md  各务千寻.md  合欢垣吹雪.md  和乐知世.md  和泉元英美.md  圆堂志美子.md  圣园弥香.md  夜樱绮罗罗.md  大野月夜.md  天童爱丽丝.md  天见和香.md  天雨亚子.md  奥空绫音.md  妮可(蔚蓝档案).md  守月铃美.md  安守实里.md  室笠朱音.md  小涂真纪.md  小钩晴.md  (+75 more)
data/articles/支线剧情/: 实现正义部.md  对策委员会.md  游戏开发部.md  风纪委员会.md
scripts/: get_data_from_moegril.py  get_mds.py  parse_wiki_urls.py
src/: api.py  create_vector_db.py  query_vector_db.py  utils.py
